[package]
name = "superdev_http_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
bs58 = "0.5"
serde_json = "1"
base64 = "0.21"
solana-sdk = "1.18"
solana-program = "1.18"
spl-token = "4.0"
spl-associated-token-account = "1.1.2"
